Mostrando status corto

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 		<li><a href="index.html">Inicio</a></li>
 		<li><a href="pagina1.html">Página UNO</a></li>
 	</ul>
-	<p>Hola Mundo, este es mi curso de GIT</p>
+	<p>Hola Mundo, este es mi curso de GIT, para hacer cambios</p>
 </body>
 </html>
