--- a/pagina1.html
+++ b/pagina1.html
@@ -6,7 +6,7 @@
 	<title>Mi primera web</title>
 </head>
 <body>
-	<h1>Mi primera página web</h1>
+	<h1>Página UNO</h1>
 	<ul>
 		<li><a href="index.html">Inicio</a></li>
 		<li><a href="pagina1.html">Página UNO</a></li>
